Somewhat nicer way to determine which java to use
git-svn-id: http://bluecove.googlecode.com/svn/trunk@8 3cac39a0-5d1b-0410-8711-c1891c4e0f47

--- a/intelbth/intelbth.vcproj
+++ b/intelbth/intelbth.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="C:\jdk1.5.0_06\include\win32;C:\jdk1.5.0_06\include"
+				AdditionalIncludeDirectories="&quot;$(JAVA_HOME)\include&quot;;&quot;$(JAVA_HOME)\include\win32&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;INTELBTH_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
