--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,20 @@
             </roles>
         </contributor>
 
+
+        <contributor>
+            <name>Mathias Kühn</name>
+            <email>kuehn@synerva.de</email>
+            <organization>SYNERVA GmbH</organization>
+            <organizationUrl>http://www.synerva.de</organizationUrl>
+            <roles>
+                <role>developer</role>
+                <role>developer-OSX</role>
+                <role>developer-OSX-10.8</role>
+            </roles>
+            <timezone>+1</timezone>
+        </contributor>        
+        
         <!--
         <contributor>
             <name></name>
