Revert "set failonerror to false in ant delete task (clean-remove-created-files-main) to prevent build failure if the src/main/resources directory does not exist"
This reverts commit 979c47afc4f5936b9992d78fade85f6f7724ea42.

--- a/bluecove/pom.xml
+++ b/bluecove/pom.xml
@@ -281,9 +281,9 @@
                                 </delete>
                                 <delete dir="${native.source.dir}/Pocket PC 2003 (ARMV4)"/>
                                 <delete dir="${native.source.dir}/Win32"/>
-                                <delete failonerror="false">
-                                    <fileset dir="${basedir}/src/main/resources" includes="*.dll" erroronmissingdir="false"/>
-                                    <fileset dir="${basedir}/src/main/resources" includes="*.jnilib" erroronmissingdir="false"/>
+                                <delete>
+                                    <fileset dir="${basedir}/src/main/resources" includes="*.dll"/>
+                                    <fileset dir="${basedir}/src/main/resources" includes="*.jnilib"/>
                                 </delete>
                             </tasks>
                         </configuration>
